Expanded row-height function (still same as column-width); Added row gutters! Changed theme-[light, dark] to mode-[light, dark]

--- a/docs/views/sandbox.html
+++ b/docs/views/sandbox.html
@@ -1,7 +1,7 @@
 <h1>Sandbox</h1>
 <section class="hide">  
     <div class="gg-device border-light float-left">
-        <header class="gg-header bg-primary theme-light">
+        <header class="gg-header bg-primary mode-light">
             <div class="text-center"><i class="fa fa-bars"></i></div>
             <div class="pad-horizontal">
                 <span>All</span>
@@ -71,18 +71,18 @@
     </div>
 
     <div class="gg-device border-light float-left">
-        <header class="gg-header bg-primary theme-light">
+        <header class="gg-header bg-primary mode-light">
             <span>test</span>
         </header>
         <div class="borders-inside-vertical">
             <div class="pad">
                 <span>To</span>
                 <span class="badge light no-pad">
-                    <img src="" alt="" class="shape-circle bg-primary theme-light" height="30" width="30">
+                    <img src="" alt="" class="shape-circle bg-primary mode-light" height="30" width="30">
                     <span class="pad-horizontal-small">Trevor Hansen</span>
                 </span>
                 <span class="badge light no-pad">
-                    <img src="" alt="" class="shape-circle bg-primary theme-light" height="30" width="30">
+                    <img src="" alt="" class="shape-circle bg-primary mode-light" height="30" width="30">
                     <span class="pad-horizontal-small">Alex Nielson</span>
                 </span>
             </div>
@@ -239,7 +239,7 @@
 </section>
 <section class="col-12 hide">
     <div class="row-12 cols-4 rows-6 cols-border hide">
-        <div class="border-dark text-middle pad-large hover-bg-dark hover-theme-light hide" ng-repeat="n in component.range(8)">
+        <div class="border-dark text-middle pad-large hover-bg-dark hover-mode-light hide" ng-repeat="n in component.range(8)">
             <div>
                 <span class="subtext"><em>June 3rd, 2014</em></span>
                 <h1 class="strong uppercase">Facebook Ads Advanced</h1 class="strong">
@@ -248,7 +248,7 @@
         </div>
     </div>
 
-    <div class="row-12 text-middle bg-dark theme-light pad-large hide">
+    <div class="row-12 text-middle bg-dark mode-light pad-large hide">
         <div>
             <h1 class="double strong uppercase">DEGORDIAN<br>ACADEMY</h1>
             <hr class="small thick light">
@@ -271,7 +271,7 @@
         <div class="col-12 pad transition bg-light">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores consequatur itaque laudantium, natus delectus quis quas enim voluptatem id aut sed est officiis dolorum modi veniam praesentium, omnis cumque corporis.</div>
     </div>
 
-    <div class="row-12 foo bg-dark theme-light text-center hide">
+    <div class="row-12 foo bg-dark mode-light text-center hide">
         <hgroup class="valign-center">
             <h1>This <span class="divider-horizontal divider-square"></span> is sparta!</h1>
         </hgroup>
@@ -321,7 +321,7 @@
                 <li><a href="#">More</a></li>
             </ul>
         </nav>
-        <div class="bg-primary theme-light pad row">
+        <div class="bg-primary mode-light pad row">
             <div class="col-1 color-white text-center">
                 <h3 class="double"><i class="fa fa-arrow-circle-down fa-3 float-left"></i></h3>
             </div>
@@ -333,7 +333,7 @@
                 </ul>
             </hgroup>
         </div>
-        <div class="bg-primary theme-light">
+        <div class="bg-primary mode-light">
             <p class="pad bg-darken">Prices round trip, 1 adult, Economy. <a href="#">Additional bag fees</a> may apply.</p>
         </div>
         <div class="border pad field" id="foo">
@@ -387,7 +387,7 @@
     </div>
 
     <div class="row-12 hide">
-        <div class="row-3 bg-secondary theme-light" style="margin-bottom: 3rem">
+        <div class="row-3 bg-secondary mode-light" style="margin-bottom: 3rem">
             <hgroup class="position-center-center text-center">
                 <h1 class="uppercase strong">Musee Picasso Paris</h1>
                 <hr class="center small thick lighten">
@@ -398,7 +398,7 @@
             </div>
         </div>
 
-        <div class="pad-large bg-dark theme-light gutter row dividers-line">
+        <div class="pad-large bg-dark mode-light gutter row dividers-line">
             <h1 class="uppercase"><span class="color-secondary">01</span> <strong>Concept</strong></h1>
             <p class="col-6 col-12-small">
                 We had the chance to meet the Muséee Picasso Paris with Gobelins, and they gave us the brief for their new mobile application. As the museum is reopening in fall 2014, they needed a way to communicate about the national event, not only inside the museum, but an mobile application that can be experienced everywhere, every time.
@@ -436,7 +436,7 @@
                 <h2><span class="subheading">03</span><br><strong>Dot Connexion</strong></h2>
             </div>
         </div>
-        <div class="pad-large bg-dark theme-light">
+        <div class="pad-large bg-dark mode-light">
             <hgroup>
                 <h1 class="uppercase"><span class="color-secondary">03</span> <strong>Interfaces</strong></h1>
                 <strong class="uppercase">Main Screens</strong>
@@ -445,7 +445,7 @@
         </div>
     </div>
 
-    <div class="row-12 pad-large bg-dark theme-light">
+    <div class="row-12 pad-large bg-dark mode-light">
         <hr class="lighten position-middle dotted">
         <div class="row-12">
             <h1 class="position-left-aboveMiddle">Now you can center things</h1>
@@ -465,7 +465,7 @@
     </div>
     <div class="row-10">
         <div class="col-2 bg-white">
-            <div class="bg-primary theme-light text-middle row">
+            <div class="bg-primary mode-light text-middle row">
                 <h1 class="inline"><i class="pad fa fa-headphones large"></i></h1>
                 <hgroup class="inline">
                     <h2>Music</h2>
@@ -502,7 +502,7 @@
                         <button class="light"><i class="fa fa-gear"></i></button>
                     </div>
                 </div>
-                <div class="row pad theme-light">
+                <div class="row pad mode-light">
                     <hgroup>            
                         <h6>Playing From</h6>
                         <h1>Justin Nozuka Radio</h1>
