--- a/scss/modules/animations/_classes.scss
+++ b/scss/modules/animations/_classes.scss
@@ -73,5 +73,8 @@
 .transition-lighten { @extend %transition-lighten; }
 .hover-lighten { @extend %hover-lighten; }
 
+.transition-fromLight { @extend %transition-fromLight; }
+.hover-fromLight { @extend %hover-fromLight; }
+
 .transition-scaleUp { @extend %transition-scaleUp; }
 .hover-scaleUp { @extend %hover-scaleUp; }
